--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
-        <title>Vite + React + TS</title>
+        <title>tira-ai-platform</title>
     </head>
     <body>
         <div id="root"></div>
